debug chart issue not showing red bar

--- a/covid-19-visualizer/src/index.css
+++ b/covid-19-visualizer/src/index.css
@@ -136,4 +136,11 @@ nav {
 
 /* Nav Bar */
 
+.global_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 
